--- a/figma.html
+++ b/figma.html
@@ -7,20 +7,23 @@
     <link rel="stylesheet" href="figma.css">
     <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Archivo' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Archivo Narrow' rel='stylesheet'>
+
 </head>
 <body>
     <header>
         <h1>NeonPortfolio</h1>
         <nav>
-            <a href="">Home</a>
-            <a href="">Projects</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
+            <a href="#home111">Home</a>
+            <a href="#projectsssss">Projects</a>
+            <a href="#abouttt">About</a>
+            <a href="#stay-connecteda">Contact</a>
+
         </nav>
     </header>
-    <hr class="divider">
+    <hr>
     <div>
-        <section class="main1">
+        <section class="main1" id="home111">
             <h2 >Welcome to the Future</h2>
         </section>
         <section class="main2">
@@ -28,7 +31,7 @@
         </section>
     </div>
 
-    <section class="grid">
+    <section class="grid" id="projectsssss">
         <div class="project">
             <img src="https://s3-alpha-sig.figma.com/img/a2f5/52a5/77052f5567eb97c53e45a637f2e8f056?Expires=1735516800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=B1DhJZ-n8GfkAmuTqQuWQEyB-1qexMS5zNvZ2EziQxD6UtNzNcRkG-JxparYdKVdJtxpJLg4ruGv6J-fO~IuZiwY8OJ1MI5wRyUIR6g~eR8V778VT~dtpGAoICGgXvJlZ7B8jvXlUXWNzii72nk8cHB5qYC~eUWIsjP8R379iOUI0iexMyu-ceJ9bmJOkjiySBgmkkZy3WlxOkHFeumeY71RPu2n9g0OEiSAr0ym1bEr8KeFlAv52iZvP6tiUEp01H78t4SBc98AydCy1SpcuLVBHX2jrZ2DaJcUzZ4gNz5TE7I1khJow7IbRye6pFg8GgLJp8SxXtsm~YU~fiQeLQ__" alt="photo1" class="i"/>
             <h3>Virtual Reality Exploration</h3>
@@ -76,7 +79,7 @@
         </div>
     </section>
 
-    <section class="what-i-do">
+    <section class="what-i-do" id="abouttt">
         <h2>What I Do</h2>
         <table class="table">
             <tr>
@@ -121,12 +124,14 @@
         </div>
     </div>
     <hr> -->
-    <div class="divider"></div>
-    <div class="div">
-        <h1 class="textContent">Ready to Explore the Future?</h1>
-        <p class="parchota">Dive into my projects and see how technology meets art in a neon-lit world.</p>
-        <button class="buttonLarge">View My Work</button>
-    </div>
+    <!-- <div class="divider"></div> -->
+    <section class="d">
+        <div class="div">
+            <h1 class="textContent">Ready to Explore the Future?</h1>
+            <p class="parchota">Dive into my projects and see how technology meets art in a neon-lit world.</p>
+            <button class="buttonLarge">View My Work</button>
+        </div>
+    </section>
     <br>
     <hr>
     <br>
@@ -143,19 +148,32 @@
             </div>
             <div class="form">
                 <form>
-                    <input type="text" value="0">
-                    <input type="text" value="0">
-                    <input type="text" value="0">
-                    <input type="text" value="0">
-                    <input type="text" value="0">
+                    <input type="text" placeholder="0">
+                    <input type="text" placeholder="0">
+                    <input type="text" placeholder="0">
+                    <input type="text" placeholder="0">
+                    <input type="text" placeholder="0">
                 </form>
             </div>
-            <button>Send Message</button>
+            <button class="button">Send Message</button>
             <section class="p">
                 <p>Skip</p>
             </section>
         </section>
     </div>
+
+    <section class="stay-connected" id="stay-connecteda">
+        <h1>Stay Connected</h1>
+        <div class="subscribe-container">
+          <input type="email" placeholder="Enter your email" class="email-input">
+          <button class="subscribe-button">Subscribe</button>
+        </div>
+        <div class="social-icons">
+          <a href="#" class="icon facebook" aria-label="Facebook"></a>
+          <a href="#" class="icon instagram" aria-label="Instagram"></a>
+          <a href="#" class="icon twitter" aria-label="X (Twitter)"></a>
+        </div>
+      </section>
 
     
 </body>
